--- a/mediascreen800px.css
+++ b/mediascreen800px.css
@@ -1,99 +1,118 @@
-@media screen and (max-width: 800px) {
-
-    header {
-        color: inherit;
-        padding: 0rem 1rem;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        transition: color 1s ease;
+@media screen and (max-width: 1400px) {
+    #profile {
+      height: 83vh;
+      margin-bottom: 6rem;
     }
-
+    .about-containers {
+      flex-wrap: wrap;
+    }
+    #contact,
+    #projects {
+      height: fit-content;
+    }
+  }
+  
+  @media screen and (max-width: 1200px) {
     .desktop {
-        display: none;
+      display: none;
     }
-
-    #hamburger-nav {
-        display: flex;
+    .hamburger-nav {
+      display: flex;
     }
-
-    .intro {
-        width: 80%;
-        height: 85vh;
-        /* padding-top: 5%; */
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        color: inherit;
-        opacity: 0;
-        animation: fadeIn 2s forwards;
-        transition: color 1s ease;
+#profile{
+    text-align: center;
+}
+    #profile,
+    .section-container {
+      display: block;
     }
-
-    @keyframes fadeIn {
-        from {
-            opacity: 0;
-        }
-
-        to {
-            opacity: 1;
-        }
+    .arrow {
+      display: none;
+    }
+    section,
+    .section-container {
+      height: fit-content;
+    }
+    section {
+      margin: 0 5%;
     }
 
     .frame {
-        margin: auto;
-        position: relative;
-        width: 100%;
-        max-width: 30rem;
-        height: 100%;
-        border: none;
-        overflow: hidden;
-        display: inline-block;
-    }
-
-    .frame img {
-        width: 100%;
-        display: block;
-        height: auto;
-        object-fit: cover;
+      width: 275px;
+      height: 275px;
+      display: inline-block;
+      margin: 0 auto 2rem;
     }
 
     .shadow-overlay {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        box-shadow: inset 0 -300px 90px -100px #262626,
+        box-shadow: inset 0 -200px 90px -100px #262626,
             inset -100px 0 50px -50px #262626,
             inset 100px 0 50px -50px #262626;
-        transition:
-            box-shadow 1s ease,
-            background-color 0.3s ease;
     }
-
+    
     .shadow-overlay.light-mode {
-        box-shadow: inset 0 -300px 90px -100px white,
+        box-shadow: inset 0 -200px 90px -100px white,
             inset -100px 0 50px -50px white,
             inset 100px 0 50px -50px white;
     }
-
-    .intro-text {
-        padding-top: 0vh;
-        text-align: center;
+    .about-containers {
+      margin-top: 0;
     }
+  }
+  
 
-    .icons {
-        height: 35px;
-        width: 35px;
-    }
 
-    .icons img {
-        height: 100%;
-        width: 100%;
-        cursor: pointer;
-        border: black;
-        object-fit: cover;
+  @media screen and (max-width: 600px) {
+    #contact,
+    footer {
+      height: 40vh;
     }
-}
+    #profile {
+      height: 83vh;
+      margin-bottom: 0;
+    }
+    article {
+      font-size: 1rem;
+    }
+    footer nav {
+      height: fit-content;
+      margin-bottom: 2rem;
+    }
+    .about-containers,
+    .contact-info-upper-container,
+    .btn-container {
+      flex-wrap: wrap;
+    }
+    .contact-info-container {
+      margin: 0;
+    }
+    .contact-info-container p,
+    .nav-links li a {
+      font-size: 1rem;
+    }
+    .experience-sub-title {
+      font-size: 1.25rem;
+    }
+    .logo {
+      font-size: 1.5rem;
+    }
+    .nav-links {
+      flex-direction: column;
+      gap: 0.5rem;
+      text-align: center;
+    }
+    .section__pic-container {
+      width: auto;
+      height: 46vw;
+      justify-content: center;
+    }
+    .section__text__p2 {
+      font-size: 1.25rem;
+    }
+    .title {
+      font-size: 2rem;
+    }
+    .text-container {
+      text-align: justify;
+    }
+  }
