--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
-body {
-    font-family: Arial, sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+* {
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth;
+}
+
+body {
+    font-family: "Poppins", sans-serif;
     color: white;
     background-color: #262626;
     transition: background-color 1s ease;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body::-webkit-scrollbar {
@@ -17,16 +25,16 @@ body.light-mode {
     color: #262626;
 }
 
-header {
+nav {
     color: inherit;
-    padding: 2rem 4rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     transition: color 1s ease;
+    height: 17vh;
 }
 
-header h2 {
+nav h2 {
     font-size: 2rem;
 }
 
@@ -61,14 +69,16 @@ header h2 {
 
 
 /* moblie */
-#hamburger-nav {
+.hamburger-nav {
     display: none;
 }
 
 .hamburger-menu {
     position: relative;
     display: inline-block;
+    z-index: 999;
 }
+
 
 .hamburger-icon {
     display: flex;
@@ -82,7 +92,7 @@ header h2 {
 .hamburger-icon span {
     width: 100%;
     height: 2px;
-    background-color: rgb(255, 255, 255);
+    background-color: blueviolet;
     transition: all 0.3 ease-in-out;
 }
 
@@ -93,7 +103,7 @@ header h2 {
     width: fit-content;
     max-height: 0;
     overflow: hidden;
-    transition: all 1 ease-in-out;
+    transition: all 0.3 ease-in-out;
 }
 
 .menu-links a {
@@ -111,21 +121,7 @@ header h2 {
 }
 
 .menu-links.open {
-    max-height: 350px;
-}
-
-.moblie-toggle-mode {
-    display: flex;
-    justify-content: space-between;
-}
-
-.moblie-toggle-mode i {
-    font-size: 1.2rem;
-    left: 60%;
-    top: 87%;
-    cursor: pointer;
-    color: inherit;
-    position: absolute;
+    max-height: 300px;
 }
 
 .hamburger-icon.open span:first-child {
@@ -152,47 +148,41 @@ header h2 {
     transform: none;
 }
 
-/* intro */
-.intro {
-    width: 100%;
-    height: 85vh;
-    margin: auto;
+/* SECTIONS */
+
+section {
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+}
+
+.section-container {
     display: flex;
-    justify-content: space-around;
-    color: inherit;
-    opacity: 0;
-    animation: fadeIn 2s forwards;
-    transition: color 1s ease;
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
+/* PROFILE SECTION */
 
-    to {
-        opacity: 1;
-    }
-}
-
-.intro h1 {
-    color: inherit;
+#profile {
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
 }
 
 .frame {
+    display: flex;
     position: relative;
     width: 100%;
     max-width: 30rem;
     height: 85vh;
-    border: none;
     overflow: hidden;
-    display: inline-block;
 }
 
 .frame img {
     width: 100%;
     display: block;
-    height: 85vh;
     object-fit: cover;
 }
 
@@ -216,87 +206,272 @@ header h2 {
         inset 100px 0 50px -50px white;
 }
 
-.intro-text {
-    padding-top: 25vh;
+.section__text {
+    align-self: center;
     text-align: center;
 }
 
-.icons {
-    height: 35px;
-    width: 35px;
+.section__text p {
+    font-weight: 600;
 }
 
-.icons img {
-    height: 100%;
-    width: 100%;
+.section__text__p1 {
+    text-align: center;
+}
+
+.section__text__p2 {
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+}
+
+.title {
+    font-size: 3rem;
+    text-align: center;
+}
+
+#socials-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    gap: 1rem;
+}
+
+/* ICONS */
+
+.icon {
     cursor: pointer;
-    border: black;
-    object-fit: cover;
+    height: 2rem;
 }
 
-.about-text {
-    width: 100%;
-    color: inherit;
-    text-align: center;
-    padding: 20px;
-    border-radius: 10px;
-    transition: top 0.5s ease;
-}
+/* BUTTONS */
 
-.skills {
-    width: 100%;
-    color: inherit;
-    text-align: center;
-    padding: 20px;
-    border-radius: 10px;
-    transition: top 0.5s ease;
-}
-
-.projects {
-    width: 100%;
-    color: inherit;
-    text-align: center;
+.btn-container {
     display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.btn {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
+}
+
+.btn-color-1,
+.btn-color-2 {
+    border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+    cursor: pointer;
+}
+
+.btn-color-1,
+.btn-color-2:hover {
+    background: rgb(53, 53, 53);
+    color: white;
+}
+
+.btn-color-1:hover {
+    background: rgb(0, 0, 0);
+}
+
+.btn-color-2 {
+    background: none;
+}
+
+.btn-color-2:hover {
+    border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-container {
+    gap: 1rem;
+}
+
+
+/* about me */
+#about {
+    position: relative;
+}
+
+.about-containers {
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+.about-details-container {
+    justify-content: center;
+    flex-direction: column;
+}
+
+.about-containers,
+.about-details-container {
+    display: flex;
+}
+
+.details-container {
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(38, 38, 38) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+}
+
+.section-container {
+    gap: 4rem;
+    height: 80%;
+}
+
+
+/* skills */
+
+#experience {
+    position: relative;
+}
+
+.experience-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+
+.experience-details-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2.5rem;
     justify-content: space-around;
-    padding: 20px;
-    border-radius: 10px;
-    transition: top 0.5s ease;
 }
 
-.project-1 {
-    padding: 2%;
-    width: 20%;
-    height: auto;
-    background-color: rgb(71, 71, 71);
-    border-radius: 15px;
+article {
     display: flex;
-    flex-direction: column;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
 }
 
-.project-2 {
-    padding: 2%;
-    width: 20%;
-    height: auto;
-    background-color: rgb(71, 71, 71);
-    border-radius: 15px;
+article .icon {
+    cursor: default;
+}
+
+/* PROJECTS*/
+
+#projects {
+    position: relative;
+}
+
+.color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+}
+
+.project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+
+.project-title {
+    margin: 1rem;
+    color: black;
+}
+
+.project p {
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(163, 163, 163);
+}
+
+/* CONTACT */
+
+#contact {
     display: flex;
+    justify-content: center;
     flex-direction: column;
+    height: 70vh;
 }
 
-.project-3 {
-    padding: 2%;
-    width: 20%;
-    height: auto;
-    background-color: rgb(71, 71, 71);
-    border-radius: 15px;
+.contact-info-upper-container {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: (250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
 }
 
-.source-code {
-    padding: 3%;
-    margin: auto;
-    border-radius: 15px;
-    background-color: #262626;
-    width: 50%;
+.contact-info-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-size: larger;
+}
+
+.contact-info-container p a{
+text-decoration: none;
+color: inherit;
+
+}
+
+.contact-icon {
+    cursor: default;
+}
+
+.email-icon {
+    height: 2.5rem;
+}
+
+/* FOOTER SECTION */
+
+footer {
+    height: 26vh;
+    margin: 0 1rem;
+}
+
+.nav-links {
+    display: flex;
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.2rem;
+    color: inherit;
+}
+
+.nav-links a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.nav-links a:hover {
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    transition: white 1s ease;
+}
+
+footer p {
+    text-align: center;
 }
